@@ -47,7 +47,7 @@ if(${SANITIZE} STREQUAL "thread")
 endif ()
 
 function (add_sanitize_thread TARGET)
-    sanitizer_add_flags(${TARGET} "ThreadSanitizer" "TSan" "")
+    sanitizer_add_flags(${TARGET} "ThreadSanitizer" "TSan")
 endfunction ()
 
 include(FindPackageHandleStandardArgs)
